tests/language_modules/15_qualified_names_calls/valid/std_io_qualified_procedure_call.vf
module Qualified.StdIO

import Std.IO exposing log

procedure main()
is
    call Std.IO.log("qualified log")
end main

end Qualified.StdIO