tests/language_modules/15_qualified_names_calls/invalid_semantics/missing_current_module_qualified_routine.vf
module Qualified.MissingLocal

procedure main()
is
    call Qualified.MissingLocal.not_declared()
end main

end Qualified.MissingLocal